fix menu button visibility

--- a/src/styles/components/_drawerMenu.scss
+++ b/src/styles/components/_drawerMenu.scss
@@ -3,8 +3,8 @@
 .drawer-menu {
   & &__open-btn {
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 1rem;
+    right: 1rem;
     z-index: 2;
   }
 
@@ -21,14 +21,5 @@
 
   &__list-item {
     color: $light-green;
-  }
-}
-
-@include respond(tablet) {
-  .drawer-menu {
-    & &__open-btn {
-      top: 1rem;
-      right: 1rem;
-    }
   }
 }
